; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/amd64/extr_sys_machdep.c_user_ldt_derefl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/amd64/extr_sys_machdep.c_user_ldt_derefl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc_ldt = type { i64, i64 }

@max_ldt_segment = common dso_local global i32 0, align 4
@M_SUBPROC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.proc_ldt*)* @user_ldt_derefl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @user_ldt_derefl(%struct.proc_ldt* %0) #0 {
  %2 = alloca %struct.proc_ldt*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.proc_ldt* %0, %struct.proc_ldt** %2, align 8
  %5 = load %struct.proc_ldt*, %struct.proc_ldt** %2, align 8
  %6 = getelementptr inbounds %struct.proc_ldt, %struct.proc_ldt* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = add nsw i64 %7, -1
  store i64 %8, i64* %6, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %30

10:                                               ; preds = %1
  %11 = load %struct.proc_ldt*, %struct.proc_ldt** %2, align 8
  %12 = getelementptr inbounds %struct.proc_ldt, %struct.proc_ldt* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %3, align 8
  %14 = load i32, i32* @max_ldt_segment, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 %15, 4
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %4, align 4
  %18 = load i64, i64* %3, align 8
  %19 = load i64, i64* %3, align 8
  %20 = load i32, i32* %4, align 4
  %21 = sext i32 %20 to i64
  %22 = add nsw i64 %19, %21
  %23 = call i32 @pmap_pti_remove_kva(i64 %18, i64 %22)
  %24 = load i64, i64* %3, align 8
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @kmem_free(i64 %24, i32 %25)
  %27 = load %struct.proc_ldt*, %struct.proc_ldt** %2, align 8
  %28 = load i32, i32* @M_SUBPROC, align 4
  %29 = call i32 @free(%struct.proc_ldt* %27, i32 %28)
  br label %30

30:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @pmap_pti_remove_kva(i64, i64) #1

declare dso_local i32 @kmem_free(i64, i32) #1

declare dso_local i32 @free(%struct.proc_ldt*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
